# cargo-toml-lint

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: Extra-end-of-line.toml  Missing-end-of-line.toml  Ok-but-weird.toml  Split-test-array.toml  Trailing-white-space.toml  Unsorted-deps-strict.toml  Unsorted-deps.toml  Unsorted-tests.toml  binary_tests.rs
