[package]
name = "cargo-toml-lint"
version = "0.1.1"
license = "Apache-2.0 OR MIT"
description = "Linter for Cargo.toml"
keywords = ["config", "cargo", "toml", "manifest", "linter"]
categories = ["command-line-utilities", "config", "development-tools", "development-tools::cargo-plugins"]
homepage = "https://github.com/FuelLabs/cargo-toml-lint"
repository = "https://github.com/FuelLabs/cargo-toml-lint"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
toml = { version = "0.5", features = ["preserve_order"] }

[dev-dependencies]
assert_cmd = "2.0.4"
